# uv-cookie

./: .editorconfig  .pre-commit-config.yaml  README.md  cookiecutter.json  noxfile.py  pyproject.toml
hooks/: post_gen_project.py
tests/: test_hello.py
{{cookiecutter.project_slug}}/: README.md  mkdocs.yml  noxfile.py  pyproject.tmpl.toml
{{cookiecutter.project_slug}}/.github/workflows/: code_quality.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: test_example.py
